--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <meta property='og:type' content='website'>
 <meta name="viewport" content='width=device-width,initial-scale=1.0,minimum-scale=1.0'>
 <!-- Use Fonts -->
+<link rel="stylesheet" href="css/jquery.bxslider.css" />
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/slick.css">
 <link rel="stylesheet" media="screen" href="css/particles/style.css">
@@ -37,6 +38,8 @@
 <script src="js/particles/app.js"></script>
 <!-- stats.js -->
 <script src="js/particles/stats.js"></script>
+<script type="text/javascript" src="js/jquery.bxslider.min.js"></script>
+<script type="text/javascript" src="js/bxslider.setting.js"></script>
 </head>
 
 <body>
@@ -109,7 +112,7 @@
 
 			<h2 id="news">NEWS<img src="images/news.png"></h2>
 			<div class="list">
-				<ul>
+				<ul class="news-list">
 					<li class="list_dtl">
 						<a href="#">
 							<img src="images/dummyimages.png" alt="">
@@ -128,16 +131,59 @@
 							<p>&gt; 001 NEW NEWS</p>
 						</a>
 					</li>
+					<li class="list_dtl">
+						<a href="#">
+							<img src="images/dummyimages.png" alt="">
+							<p>&gt; 002 NEW NEWS</p>
+						</a>
+					</li>
+					<li class="list_dtl">
+						<a href="#">
+							<img src="images/dummyimages.png" alt="">
+							<p>&gt; 002 NEW NEWS</p>
+						</a>
+					</li>
+					<li class="list_dtl">
+						<a href="#">
+							<img src="images/dummyimages.png" alt="">
+							<p>&gt; 002 NEW NEWS</p>
+						</a>
+					</li>
+					<li class="list_dtl">
+						<a href="#">
+							<img src="images/dummyimages.png" alt="">
+							<p>&gt; 003 NEW NEWS</p>
+						</a>
+					</li>
+					<li class="list_dtl">
+						<a href="#">
+							<img src="images/dummyimages.png" alt="">
+							<p>&gt; 003 NEW NEWS</p>
+						</a>
+					</li>
+					<li class="list_dtl">
+						<a href="#">
+							<img src="images/dummyimages.png" alt="">
+							<p>&gt; 003 NEW NEWS</p>
+						</a>
+					</li>
+					<li class="list_dtl">
+						<a href="#">
+							<img src="images/dummyimages.png" alt="">
+							<p>&gt; 004 NEW NEWS</p>
+						</a>
+					</li>
+
 				</ul>
-				<div class="arrow_box">
+				<!--div class="arrow_box">
 					<button type="button" name="button"><a class="arrow back" href="">＜</a></button>
 					<button type="button" name="button"><a class="arrow next" href="">＞</a></button>
-				</div>
+				</div-->
 			</div>
 
 		  <h2 id="works">WORKS<img src="images/works.png"></h2>
 			<div class="list">
-				<ul>
+				<ul class="works-list">
 					<li class="list_dtl">
 						<a href="#">
 							<img src="images/dummyimages.png" alt="">
@@ -174,11 +220,54 @@
 							<p>&gt; 001 NEW WORK</p>
 						</a>
 					</li>
+					<li class="list_dtl">
+						<a href="#">
+							<img src="images/dummyimages.png" alt="">
+							<p>&gt; 002 NEW WORK</p>
+						</a>
+					</li>
+					<li class="list_dtl">
+						<a href="#">
+							<img src="images/dummyimages.png" alt="">
+							<p>&gt; 002 NEW WORK</p>
+						</a>
+					</li>
+					<li class="list_dtl">
+						<a href="#">
+							<img src="images/dummyimages.png" alt="">
+							<p>&gt; 002 NEW WORK</p>
+						</a>
+					</li>
+					<li class="list_dtl">
+						<a href="#">
+							<img src="images/dummyimages.png" alt="">
+							<p>&gt; 002 NEW WORK</p>
+						</a>
+					</li>
+					<li class="list_dtl">
+						<a href="#">
+							<img src="images/dummyimages.png" alt="">
+							<p>&gt; 002 NEW WORK</p>
+						</a>
+					</li>
+					<li class="list_dtl">
+						<a href="#">
+							<img src="images/dummyimages.png" alt="">
+							<p>&gt; 002 NEW WORK</p>
+						</a>
+					</li>
+					<li class="list_dtl">
+						<a href="#">
+							<img src="images/dummyimages.png" alt="">
+							<p>&gt; 003 NEW WORK</p>
+						</a>
+					</li>
+
 				</ul>
-				<div class="arrow_box">
+				<!--div class="arrow_box">
 					<button type="button" name="button"><a class="arrow back" href="">＜</a></button>
 					<button type="button" name="button"><a class="arrow next" href="">＞</a></button>
-				</div>
+				</div-->
 			</div>
 
 		  <h2 id="office">OFFICE<img src="images/office.png"></h2>
