--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
 <script src="js/particles/app.js"></script>
 <!-- stats.js -->
 <script src="js/particles/stats.js"></script>
-<script type="text/javascript" src="js/jquery.bxslider.min.js"></script>
-<script type="text/javascript" src="js/bxslider.setting.js"></script>
+<script type="text/javascript" src="js/slick.setting.js"></script>
 </head>
 
 <body>
