--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 							<p><input type="text" name="name" size="50" maxlength="40" placeholder="Name"></p>
 							<p><input type="email" name="email" size="50" maxlength="40" placeholder="Email address"></p>
 							<p><textarea name="comment"></textarea></p>
-							<p><input type="submit" name	="submit" value="Send">
+							<p><input type="submit" name	="submit" value="SEND">
 						</form>
 					</div>
 					<div id="thankarea">
